--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
-<div>
-    lol
-    
-    </div>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>title</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
+  </head>
+  <body>
+    hi
+  </body>
+</html>
